--- a/02_CSS/03_style.css
+++ b/02_CSS/03_style.css
@@ -3,7 +3,7 @@
 /* Type selector */
 button{
     background-color: rgb(238, 255, 0);
-    color: white;
+    color: rgb(79, 218, 86);
 }
 
 /* Class selector */
