--- a/06_Project/blog/css/main-grid.css
+++ b/06_Project/blog/css/main-grid.css
@@ -1,4 +1,11 @@
 
+
+
+@import "main-grid-items.css";
+@import "blogs-preview.css";
+@import "blogs-preview-card.css";
+
+
 body {
     background: white;
     font-size: 14px;
