--- a/06_Project/blog/css/blog-post.css
+++ b/06_Project/blog/css/blog-post.css
@@ -6,9 +6,10 @@ body {
 }
 
 .blog-post {
+    display: inline-block;
     background-color: #fff;
     padding: 20px;
-    max-width: 800px;
+    max-width: 100%;
     margin: 0 auto;
 }
 
@@ -33,3 +34,8 @@ p {
     font-size: 1rem;
     margin-bottom: 15px;
 }
+
+.author-avatar {
+    width: 4%
+}
+
