--- a/06_Project/blog/css/main-grid.css
+++ b/06_Project/blog/css/main-grid.css
@@ -31,6 +31,27 @@ body {
     border: 2px solid rgb(255, 255, 255);
 }
 
+@media(max-width:1000px) {
+    .main-grid {
+        display: grid;
+        width: 80vw;
+        height: 1fr;
+        margin: auto;
+
+        grid-template-columns: 80vw;
+        grid-template-rows: 70px 240px 1fr 1fr 120px;
+
+        grid-template-areas:
+            "nav"
+            "header"
+            "blogs"
+            "footer";
+
+        border: 2px solid rgb(255, 255, 255);
+    }
+}
+
+
 .nav {
     grid-area: "nav";
 }
@@ -57,6 +78,5 @@ body {
     display: flex;
     border: 3px solid rgb(255, 255, 255);
     flex-direction: row;
-
 }
 
