--- a/06_Project/blog/css/main-grid-items.css
+++ b/06_Project/blog/css/main-grid-items.css
@@ -1,19 +1,6 @@
-nav {
-    background-color: #4c87af;
-    padding: 10px;
-    text-align: center;
-}
 
-nav a {
-    color: white;
-    text-decoration: none;
-    margin: 0 15px;
-    font-size: 1.2rem;
-}
 
-nav a:hover {
-    text-decoration: underline;
-}
+@import "nav-bar.css";
 
 .subscribe-container {
     display: flex;
